--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     </main>
 
     <footer>
-        <p>Site criado por <a href="https://github.com/gustavoguanabara/html-css/tree/master/aulas-pdf">Gustavo Guanabara</a> para o <a href="https://www.youtube.com/@CursoemVideo" target="_blank">CursoemVideo</a>
+        <p>Site criado por <a href="https://github.com/gustavoguanabara/html-css/tree/master/aulas-pdf">Junio Becker</a> para o <a href="https://www.youtube.com/@CursoemVideo" target="_blank">CursoemVideo</a>
         </p>
     </footer>
 </body>
